# airfrance-klm-api

./: .env.example  Makefile  README.md  openapi.json  pyproject.toml  pytest.ini  t.py
.github/: test.yml
.github/workflows/: test.yml
airfrance_klm_api/: base.py  environment.py  logger.py  utils.py
airfrance_klm_api/models/: __init__.py  booking_flows.py  config.py  datetime.py  enums.py  origins.py  time_periods.py
airfrance_klm_api/offers/: offers.py
tests/: test_base.py  test_config.py  test_datetime.py  test_environment.py  test_logger.py  test_models.py  test_offers.py
